--- a/android/build.gradle
+++ b/android/build.gradle
@@ -43,8 +43,7 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation 'com.google.firebase:firebase-core:16.0.6'
     implementation 'com.android.support:appcompat-v7:27.0.0'
+    implementation 'com.google.android.gms:play-services-tagmanager:16.+'
+    implementation 'com.google.firebase:firebase-analytics:16.+'
 }
-
-com.google.gms.googleservices.GoogleServicesPlugin.config.disableVersionCheck = true
