--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,6 +5,7 @@ target 'Plugin' do
   use_frameworks!
   pod 'Firebase/Core'
   pod 'Firebase/Analytics'
+  pod 'GoogleTagManager', '~> 6.0'
   pod 'Capacitor', :path => '../node_modules/@capacitor/ios'
 end
 
@@ -12,5 +13,6 @@ target 'PluginTests' do
   use_frameworks!
   pod 'Firebase/Core'
   pod 'Firebase/Analytics'
+  pod 'GoogleTagManager', '~> 6.0'
   pod 'Capacitor', :path => '../node_modules/@capacitor/ios'
 end
